# chiplet

./: .gitignore  CMakeLists.txt  README.md  bench.txt  delayInfo.txt  target.json  新建文本文档.txt
benchmark/MLP/: mlp.cu  mlp.yml
benchmark/my_test/test3/matmul/: matmul.cpp  matmul.cu  test_o3.yml
include/: configuration.hpp  gem5_class.hpp  gpgpu_class.hpp  phase_config.hpp
make_yml/: CMakeLists.txt  test.cpp
python/: lib.json  solution.json  solver.py  target.json  ui.py
result/: makefile
